Se agregaron  las carpetas de vendedor y  administrador

--- a/Vendedor/indexVen.html
+++ b/Vendedor/indexVen.html
@@ -81,7 +81,8 @@
                                         </form>
                                     </li>
                                     <li>
-                                        <a href="#" class="account-btn" target="">Lizbeth Geogina Barrera Estrada</a>
+                                        <a href="login.html" class="account-btn" target="">Lizbeth Geogina Barrera Estrada</a>
+                                        <a href="login.html" class="account-btn" target="">Cerrar Sesión </a>
                                     </li>
                                 </ul>
                             </div>
