Se agrego una carpeta llamada Administrador y se agregaron nuevos archivos los cuales son  formularioUsuario.html y actualizarUsuario.html

--- a/Administrador/indexAdmin.html
+++ b/Administrador/indexAdmin.html
@@ -79,17 +79,13 @@
                             <div class="search">
                                 <ul class="d-flex align-items-center">
                                     <li>
-                                        <!-- Search Box -->
-                                        <form action="#" class="form-box f-right ">
-                                            <input type="text" name="Search" placeholder="Buscar Productos">
-                                            <div class="search-icon">
-                                                <i class="ti-search"></i>
-                                            </div>
-                                        </form>
+                                       
                                     </li>
                                     <li>
-                                        <a href="#" class="account-btn" target="">Juan Fernando Peréz Del Corral</a>
-                                    </li>
+                                        <a href="login.html" class="account-btn" target="">Juan Fernando Peréz Del Corral
+                                        <a href="login.html" class="account-btn" target="">Cerrar Sesión </a>
+                                        </a>
+                                </li>
                                 </ul>
                             </div>
                         </div>
