--- a/administrador/from_categ_actualizar.html
+++ b/administrador/from_categ_actualizar.html
@@ -53,7 +53,7 @@
                             <form action="assets/php/registro.php" method="post">
                                 <!-- Login Heading -->
                                 <div class="register-heading">
-                                    <span>Agregar una Categoria</span>
+                                    <span>Actualizar Categoria</span>
                                 </div>
                                 <!-- Single Input Fields -->
                                 <div class="input-box">
