Se modificaron los archivos de formEditAdmin y formAdmin

--- a/administrador/formEditProAdmin.html
+++ b/administrador/formEditProAdmin.html
@@ -53,7 +53,7 @@
                             <form action="../assets/php/login.php" method="post">
                                 <!-- Login Heading -->
                                 <div class="login-heading">
-                                    <span>Editar Producto</span>
+                                    <span>Editar Productos</span>
                                 </div>
                                 <!-- Single Input Fields -->
 
