--- a/administrador/formProAdmin.html
+++ b/administrador/formProAdmin.html
@@ -53,7 +53,7 @@
                             <form action="assets/php/login.php" method="post">
                                 <!-- Login Heading -->
                                 <div class="login-heading">
-                                    <span>Agregar Producto</span>
+                                    <span>Agregar Productos</span>
                                 </div>
                                 <!-- Single Input Fields -->
 
