--- a/admin/formEditVen.html
+++ b/admin/formEditVen.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Ingrese sus credenciales para acceder</title>
+    <title>Crea tu cuenta para acceder</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.webmanifest">
-    <link rel="shortcut icon" type="../image/x-icon" href="../assets/img/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
 
     <!-- CSS here -->
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css">
@@ -42,45 +42,43 @@
         </div>
     </div>
     <!-- Preloader Start-->
-
-    <main class="login">
-        <!-- login Area Start -->
-        <div class="login-form-area">
+    <!-- header end -->
+    <main class="login-bg">
+        <!-- Register Area Start -->
+        <div class="register-form-area">
             <div class="container">
                 <div class="row justify-content-center">
-                    <div class="col-xl-7 col-lg-8">
-                        <div class="login-form">
-                            <form action="../assets/php/login.php" method="post">
+                    <div class="col-xl-6 col-lg-8">
+                        <div class="register-form text-center">
+                            <form action="assets/php/registro.php" method="post">
                                 <!-- Login Heading -->
-                                <div class="login-heading">
-                                    <span>Editar Productos</span>
+                                <div class="register-heading">
+                                    <span>Editar vendedor</span>
                                 </div>
                                 <!-- Single Input Fields -->
-
                                 <div class="input-box">
                                     <div class="single-input-fields">
                                         <label>Nombre</label>
-                                        <input type="text" placeholder="nombre del producto" name="name" pattern="[A-Za-z. áéíóúñÑ]{3,60}$" required>
+                                        <input type="text" placeholder=" " name="nombre" pattern="[A-Za-z. áéíóúñÑ]{3,60}$" title="No se aceptan simbolos, números ni caracteres especiales" required>
                                     </div>
                                     <div class="single-input-fields">
-                                        <label>Foto</label>
-                                        <input type="image" placeholder="Foto frontal" name="image" pattern="[a-zA-Z0-9]{3,}" required>
-                                        <input type="image" placeholder="Foto trasera" name="image" pattern="[a-zA-Z0-9]{3,}" required>
-                                        <input type="image" placeholder="Foto de cualquier ángulo difernte" name="image" pattern="[a-zA-Z0-9]{3,}" required>
+                                        <label>Apellido</label>
+                                        <input type="text" placeholder="Ingresa tu apellido" name="apellido" pattern="[A-Za-z. áéíóúñÑ]{3,40}$" title="No se aceptan simbolos, números ni caracteres especiales" required>
                                     </div>
                                     <div class="single-input-fields">
-                                        <label>Descripció</label>
-                                        <input type="text" placeholder="Materiales" name="clave" pattern="[A-Za-z. áéíóúñÑ]{3,60}$"  required>
-                                        <input type="text" placeholder="Marca" name="clave" pattern="[A-Za-z. áéíóúñÑ]{3,60}$"  required>
-                                        <input type="text" placeholder="Dimensiones" name="clave" pattern="[A-Za-z. áéíóúñÑ]{3,60}$"  required>
-                                        <input type="text" placeholder="Condiciones del artículo" name="clave" pattern="[A-Za-z. áéíóúñÑ]{3,60}$"  required>
-                                        <input type="text" placeholder="Observaciones" name="clave" pattern="[A-Za-z. áéíóúñÑ]{3,60}$"  required>
-                                        <input type="text" placeholder="Precio" name="clave" pattern="[A-Za-z. áéíóúñÑ]{3,60}$"  required>
+                                        <label>Correo Electrónico</label>
+                                        <input type="email" placeholder="Ingresa tu correo electrónico" name="email" pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-z]{2,}$" title="Ingrese un correo electrónico válido" required>
                                     </div>
-                                    <div class="login-footer">
-                                        <button type="submit" class="submit-btn3">Editar</button>
+                                    <div class="single-input-fields">
+                                        <label>Contraseña</label>
+                                        <input type="password" placeholder="Ingresa tu contraseña" name="pass" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Debe contener un número, letras mayúsculas y minúsculas, y por lo menos 8 caracteres" required>
                                     </div>
-                                    </div>
+                                </div>
+                                <!-- form Footer -->
+                                <div class="register-footer">
+                                    <button type="submit" class="submit-btn3">Editar
+
+                                    </button>
                                 </div>
                             </form>
                         </div>
@@ -88,7 +86,7 @@
                 </div>
             </div>
         </div>
-        <!-- login Area End -->
+        <!-- Register Area End -->
     </main>
 
     <!-- JS here -->
